# aioli

./: .env  .gitignore  Cargo.toml  Makefile  README.md  Settings.toml  pom.xml
manual_mappings/: manual_map.csv  remap_df.csv  remap_df_2.csv  route_and_form_map.csv  rx_dose_form.csv
sql/: active_ingredient.sql  aeolus.sql  aeolus_2.sql  aeolus_regex.sql  clean_dose_amt.sql  clean_dose_form.sql  cleaning.sql  combined_drug_mapping.sql  create_faers.sql  create_mapping_table.sql  create_table.sql  dose_form_1.sql  dose_form_2.sql  eu_drug_name.sql  exact_mapping.sql  initial_mapping.sql  manual_matches.sql  map_to_sbd.sql  map_to_sbdf.sql  map_to_scd.sql  map_to_scdc.sql  map_to_scdf.sql  nda_ingredient.sql  parenthesis.sql  populate_brand_and_ingredient.sql  populate_brand_from_any_word.sql  rename_ingredients.sql  roll_up.sql  rollup_atc.sql  rollup_omop.sql  rollup_rxnorm.sql  rxnormalizer.sql  split_multi_rxnorm.sql  update_concept_ids.sql
sql/exact_mapping/: article_57.sql  combined_drug_mapping.sql  create_table.sql  dose_amt.sql  dose_form.sql  katy_normalizer.sql  map_to_atc.sql  map_to_sbd.sql  map_to_sbdf.sql  map_to_scd.sql  map_to_scdc.sql  map_to_scdf.sql  parenthesis.sql  populate_brand_and_ingredient.sql  reinterpret.sql
src/: main.rs
src/db/: mod.rs
src/fda_data_pull/: mod.rs
src/main/resources/: config.properties  log4j2.xml
src/main/resources/manual_mappings/: art57_rxnorm.tsv  manual_mapping.tsv  route_and_form_map.csv  (+1 more)
src/mapping/: exact_mapping.rs  mapper.rs  mod.rs  roll_up.rs  rx_to_standard.rs  rxnormalizer.rs  table_creator.rs
(+8 files in other folders)
