[package]
name = "aioli"
version = "0.1.0"
authors = ["Rowan Parry <r.parry@erasmusmc.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
select = "0.5"
json = "0.12.4"
rawsql = "0.1.0"
tokio = { version = "1.1.1", features = ["full"] }
deadpool-postgres = "0.7.0"
deadpool = "0.7.0"
distance = "0.4.0"
tempfile = "3.2.0"
zip = "0.5.10"
futures = "0.3.12"
walkdir = "2.3.1"
tokio-postgres = "0.7.0"
reqwest = "0.11"
config = "0.11.0"